--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,8 @@
 }
 
 .main {
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  /* height: 100vh; */
   padding: 4rem 0;
   flex: 1;
   display: flex;
