--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,11 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 rem;
 }
 
 .main {
   /* min-height: 100vh; */
   /* height: 100vh; */
-  padding: 4rem 0;
+  padding: 0 0;
   flex: 1;
   display: flex;
   flex-direction: column;
