--- a/apps/app/src/assets/views/layout.hbs
+++ b/apps/app/src/assets/views/layout.hbs
@@ -8,6 +8,13 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Collection Roulette</h1>    
+    <h1><a href="/">Collection Roulette</a></h1>    
+    <ul>
+        <li><a href="/pictures">Pictures</a></li>
+    </ul>
+    <h2>{{ content }}</h2>
+    <div>
+        {{{body}}}
+    </div>
 </body>
 </html>
