--- a/apps/app/src/assets/views/layout.hbs
+++ b/apps/app/src/assets/views/layout.hbs
@@ -4,17 +4,32 @@
     <meta charset='utf-8'>
     <title>Collection Roulette</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    {{!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> --}}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src='main.js'></script>
 </head>
 <body>
-    <h1><a href="/">Collection Roulette</a></h1>    
-    <ul>
-        <li><a href="/pictures">Pictures</a></li>
-    </ul>
-    <h2>{{ content }}</h2>
-    <div>
-        {{{body}}}
+    <div class="content">
+        <section class="section">
+            <div class="container">
+                <h1 class="title"><a href="/">Collection Roulette</a></h1>    
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <ul>
+                    <li><a href="/pictures">Pictures</a></li>
+                </ul>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2>{{ content }}</h2>
+                <div>
+                    {{{body}}}
+                </div>                
+            </div>
+        </section>
     </div>
 </body>
 </html>
