assets modified from layout test

--- a/apps/app/src/assets/views/main.hbs
+++ b/apps/app/src/assets/views/main.hbs
@@ -1,1 +1,5 @@
-<div>main partial</div>
+<div class="block">
+    <div class="container is-flex is-justify-content-center">
+        Collection Roulette
+    </div>
+</div>
