--- a/apps/app/src/assets/views/pictures.hbs
+++ b/apps/app/src/assets/views/pictures.hbs
@@ -1,1 +1,17 @@
-<div>pictures partial</div>
+    <div class="block">
+        <div class="container">
+            <figure class="image">
+                <img src="./examples/maksym-tymchyk-KMDGu1blGi8-unsplash.jpg">
+            </figure>
+        </div>
+    </div>
+    <div class="block">
+        <div class="container is-flex is-justify-content-center	">
+            <a class="button is-primary" href="/pictures">
+                <span class="icon">
+                    <i class="fas fa-arrow-right"></i>
+                  </span>
+                <span>Next</span>
+            </a>
+        </div>
+    </div>
