--- a/apps/app/src/assets/views/layout.hbs
+++ b/apps/app/src/assets/views/layout.hbs
@@ -2,34 +2,37 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Collection Roulette</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    {{!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> --}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <script src="https://kit.fontawesome.com/f9d1e00815.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <div class="content">
-        <section class="section">
-            <div class="container">
-                <h1 class="title"><a href="/">Collection Roulette</a></h1>    
+<body class="has-navbar-fixed-top">
+    <nav class="navbar is-primary has-shadow is-fixed-top">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    <img src="slow-motion-28.png">
+                    <div class="navbar-item has-text-weight-bold">Collection Roulette</div>
+                </a>
+                <a class="navbar-burger" data-target="navMenu">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
             </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <ul>
-                    <li><a href="/pictures">Pictures</a></li>
-                </ul>
+            <div class="navbar-menu" id="navMenu">
+                <div class="navbar-start">
+                    <a class="navbar-item" href="/pictures">Pictures</a>
+                </div>
             </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <h2>{{ content }}</h2>
-                <div>
-                    {{{body}}}
-                </div>                
-            </div>
-        </section>
-    </div>
+        </div>
+    </nav>
+
+    {{{body}}}
+
 </body>
 </html>
