main page layout adjusted

--- a/apps/app/src/assets/views/main.hbs
+++ b/apps/app/src/assets/views/main.hbs
@@ -1,5 +1,5 @@
-<div class="block">
+<section class="section">
     <div class="container is-flex is-justify-content-center">
-        Collection Roulette
+        <span class="title">Collection Roulette</span>
     </div>
-</div>
+</section>
