--- a/apps/app/src/assets/views/layout.hbs
+++ b/apps/app/src/assets/views/layout.hbs
@@ -4,10 +4,12 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Collection Roulette</title>
+    <!-- TODO: {{title}} - Collection Roulette -->
+    <!-- e.g. #1 - Picture - Collection Roulette -->
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='/main.css'>
+    <script src='/main.js'></script>
     <script src="https://kit.fontawesome.com/f9d1e00815.js" crossorigin="anonymous"></script>
 </head>
 <body class="has-navbar-fixed-top">
@@ -15,7 +17,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
-                    <img src="slow-motion-28.png">
+                    <img src="/slow-motion-28.png">
                     <div class="navbar-item has-text-weight-bold">Collection Roulette</div>
                 </a>
                 <a class="navbar-burger" data-target="navMenu">
@@ -32,7 +34,8 @@
         </div>
     </nav>
 
-    {{{body}}}
-
+    <section class="section">
+        {{{body}}}
+    </section>
 </body>
 </html>
