--- a/apps/app/src/assets/views/main.hbs
+++ b/apps/app/src/assets/views/main.hbs
@@ -1,5 +1,5 @@
-<section class="section">
+{{!-- <section class="section"> --}}
     <div class="container is-flex is-justify-content-center">
         <span class="title">Collection Roulette</span>
     </div>
-</section>
+{{!-- </section> --}}
