--- a/apps/app/src/assets/views/pictures.hbs
+++ b/apps/app/src/assets/views/pictures.hbs
@@ -1,17 +1,19 @@
-    <div class="block">
+    {{!-- <div class="block"></div> --}}
+    {{!-- <div class="block"> --}}
         <div class="container">
-            <figure class="image">
-                <img src="./examples/maksym-tymchyk-KMDGu1blGi8-unsplash.jpg">
-            </figure>
+            <div class="columns">
+                <div class="column">
+                    <div class="block has-text-centered">Count: {{ count }}</div>
+                    <div class="block has-text-centered">Random-Index: {{ randomIndex }}</div>
+                    <div class="block has-text-centered">
+                        <a class="button is-primary" href="/pictures">
+                            <span class="icon">
+                                <i class="fa-solid fa-shuffle"></i>
+                            </span>
+                            <span>Random</span>
+                        </a>
+                    </div>
+                </div>
+            </div>            
         </div>
-    </div>
-    <div class="block">
-        <div class="container is-flex is-justify-content-center	">
-            <a class="button is-primary" href="/pictures">
-                <span class="icon">
-                    <i class="fas fa-arrow-right"></i>
-                  </span>
-                <span>Next</span>
-            </a>
-        </div>
-    </div>
+    {{!-- </div> --}}
