layout adjusted (margins and centered content)

--- a/apps/app/src/assets/views/layout.hbs
+++ b/apps/app/src/assets/views/layout.hbs
@@ -12,7 +12,7 @@
     <script src='/main.js'></script>
     <script src="https://kit.fontawesome.com/f9d1e00815.js" crossorigin="anonymous"></script>
 </head>
-<body class="has-navbar-fixed-top">
+<body class="has-navbar-fixed-top mt-2">
     <nav class="navbar is-primary has-shadow is-fixed-top">
         <div class="container">
             <div class="navbar-brand">
@@ -33,9 +33,6 @@
             </div>
         </div>
     </nav>
-
-    <section class="section">
-        {{{body}}}
-    </section>
+    {{{body}}}
 </body>
 </html>
