--- a/apps/app/src/assets/views/main.hbs
+++ b/apps/app/src/assets/views/main.hbs
@@ -1,5 +1,3 @@
-{{!-- <section class="section"> --}}
-    <div class="container is-flex is-justify-content-center">
-        <span class="title">Collection Roulette</span>
-    </div>
-{{!-- </section> --}}
+<div class="container has-text-centered">
+    <span class="title">Collection Roulette</span>
+</div>
