second button added at the bottom

--- a/apps/app/src/assets/views/picture.hbs
+++ b/apps/app/src/assets/views/picture.hbs
@@ -11,5 +11,13 @@
         <figure class="image">
             <img src="{{ location }}">
         </figure>            
-    </div>            
+    </div>    
+    <div class="block has-text-right">
+        <a class="button is-primary" href="/pictures/?orderBy=random">
+            <span class="icon">
+                <i class="fas fa-arrow-right"></i>
+            </span>
+            <span>Next</span>
+        </a>
+    </div>        
 </div>
