--- a/apps/app/src/assets/views/picture.hbs
+++ b/apps/app/src/assets/views/picture.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="block">
         <figure class="image">
-            <img src="{{ location }}">
+            <img src="{{ location }}" style="height: 85vh; width:auto; margin:auto">
         </figure>            
     </div>    
     <div class="block has-text-right">
