--- a/apps/app/src/assets/views/picture.hbs
+++ b/apps/app/src/assets/views/picture.hbs
@@ -8,8 +8,8 @@
         </a>
     </div>
     <div class="block">
-        <figure class="image">
-            <img src="{{ location }}" style="height: 85vh; width:auto; margin:auto">
+        <figure class="image" style="height: 85vh;">
+            <img src="{{ location }}" style="max-height: 85vh; height: auto; width: auto; margin:auto">
         </figure>            
     </div>    
     <div class="block has-text-right">
