--- a/apps/app/src/assets/views/layout.hbs
+++ b/apps/app/src/assets/views/layout.hbs
@@ -29,6 +29,7 @@
             <div class="navbar-menu" id="navMenu">
                 <div class="navbar-start">
                     <a class="navbar-item" href="/pictures">Pictures</a>
+                    <a class="navbar-item" href="/admin">Admin</a>
                 </div>
             </div>
         </div>
