--- a/apps/app/src/assets/views/admin.hbs
+++ b/apps/app/src/assets/views/admin.hbs
@@ -1,3 +1,8 @@
 <div class="container has-text-centered">
-    <span class="title">Admin</span>
+    <div class="block">
+        <span class="title">Admin</span>
+    </div>
+    <div class="block">
+        <a href="/jobs">Jobs</a>
+    </div>  
 </div>
