jobs with dummy data

--- a/apps/app/src/assets/views/jobs.hbs
+++ b/apps/app/src/assets/views/jobs.hbs
@@ -1,3 +1,32 @@
 <div class="container has-text-centered">
-    <span class="title">Jobs</span>
+    <div class="block">
+        <span class="title">Jobs</span>
+    </div>
+    <table class="table is-striped mx-auto">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Type</th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>reindex</td>
+                <td>111</td>
+                <td>222</td>
+                <td>completed</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>reindex</td>
+                <td>111</td>
+                <td>222</td>
+                <td>completed</td>
+            </tr>            
+        </tbody>
+    </table>    
 </div>
