--- a/apps/app/src/assets/views/picture.hbs
+++ b/apps/app/src/assets/views/picture.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="block">
         <figure class="image" style="height: 85vh;">
-            <img src="{{ location }}" style="max-height: 85vh; height: auto; width: auto; margin:auto">
+            <img src="{{ location }}" class="mx-auto" style="max-height: 85vh; height: auto; width: auto;">
         </figure>            
     </div>    
     <div class="block has-text-right">
