creating and listing jobs

--- a/apps/app/src/assets/views/admin.hbs
+++ b/apps/app/src/assets/views/admin.hbs
@@ -5,4 +5,14 @@
     <div class="block">
         <a href="/jobs">Jobs</a>
     </div>  
+    <div class="block">
+        <form action="/jobs" method="post">
+            <button class="button is-primary" type="submit">
+                <span class="icon">
+                    <i class="fa-solid fa-database"></i>
+                </span>
+                <span>Reindex</span>                
+            </button>
+        </form>
+    </div>
 </div>
