job management and date formatting

--- a/apps/app/src/assets/views/jobs.hbs
+++ b/apps/app/src/assets/views/jobs.hbs
@@ -31,8 +31,8 @@
                 <tr>
                     <td>{{id}}</td>
                     <td>{{type}}</td>
-                    <td>{{started}}</td>
-                    <td>{{completed}}</td>
+                    <td>{{formatDate started}}</td>
+                    <td>{{formatDate completed}}</td>
                     <td>{{status}}</td>
                 </tr>
             {{/each}}
